reformatted according to PhetStyle intellij format, and minor cleanup
# 1.01.01 (53434) Jun 23, 2011
record-and-playback: 6/13/2010 Layout improvements for RecordAndPlaybackControlPanel
# 1.01.00 (38007) Jan 10, 2010
1/10/10 public version for milestone "full redeploy, 2010 Q1"
# 1.00.01 (37360) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 1.00.00 (35397) Oct 1, 2009
> Updated version to 1.00
# 0.02.02 (35395) Sep 30, 2009
Fixed bugs related to play/pause during record/playback
# 0.02.01 (35385) Sep 30, 2009
9/30/09 Redeploy for testing
Added the ability to step during recording, instead of only during playback
# 0.02.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
# 0.01.00 (30667) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30666
# 0.00.49 (30469) Apr 15, 2009
4/15/09 Testing with system UIManager
# 0.00.48 (30393) Apr 14, 2009
4/14/09 Only paint every other dot node
# 0.00.47 (30345) Apr 10, 2009
added caching for performance improvements in dot path graphics
Updated speeds and vector scales
# 0.00.46 (30273) Apr 7, 2009
update remote control arrows on mode change
make sure velocity-acceleration proportion ratios match those in the play area
# 0.00.45 (30270) Apr 7, 2009
4/7/09 Added internationalization
# 0.00.44 (30207) Apr 1, 2009
4/1/09 Removed frictionless checkbox
# 0.00.43 (30156) Apr 1, 2009
4/1/09 Initial deploy of ladybug-2d simulation independent of moving-man
# 1.20.42 (30144) Mar 31, 2009
Fixed: path doesn't clear on reset
reduced radius in circular mode so the acceleration vector is longer
# 1.20.41 (30131) Mar 31, 2009
3/31/09 added caching to the default trace graphics for performance improvements
# 1.20.40 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.20.39 (29352) Mar 10, 2009
Switch to position mode when dragging ladybug
# 1.20.38 (29343) Mar 10, 2009